# --
# Changes of OTRS 
# Copyright (C) 2001-2004 Martin Edenhofer <martin+code@otrs.org>
# --
# $Id: CHANGES,v 1.121 2004/05/04 15:14:06 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see 
# the enclosed file COPYING for license information (GPL). If you 
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --

CVS head 

 - (2004/05/04) added ticket history log on ticket link update and 
    notification info if link ticket number doesn't exists.
 - (2004/05/03) added PreApplicationModule examples to Kernel/Config.pm
 - (2004/04/30) added multi customer id support to Kernel/System/CustomerUser.pm,
    Kernel/System/CustomerUser/DB.pm and Kernel/System/CustomerUser/LDAP.pm. 
    So one customer can have more then one customer id.
 - (2004/04/22) added notification module for customer panel 
    (customer.pl) like for existing agent (index.pl)
 - (2004/04/20) added PreApplicationModule (index.pl) and 
    CustomerPanelPreApplicationModule (customer.pl) This interface 
    use useful to check some user options or to redirect not accept 
    new application news.
 - (2004/04/19) added MaxSessionIdleTime for session managment 
    to check/delete idle sessions
 - (2004/04/15) added file size info to article attachments
    (DBUpdate-to-1.3.*.sql is required!).
 - (2004/04/14) ticket history rewritten and added i18n feature
 - (2004/04/14) reworked/renamed Kernel::System::Ticket::Article 
    and sub module functions and added added pod docu, see 
    http://dev.otrs.org/
 
    Note: Kernel::System::Ticket are not longer compat. to OTRS 1.2 
     or lower!
   
 - (2004/04/07) added config option SessionUseCookieAfterBrowserClose
    for session config stuff to keep cookies in browser (after closing
    the browser) till expiration of session (default is 0). 
 - (2004/04/06) added missing priority options in TicketSeatch()
    of Kernel::System::Ticket.