@@ -2,7 +2,7 @@
 # Changes of OTRS 
 # Copyright (C) 2001-2004 Martin Edenhofer <martin+code@otrs.org>
 # --
-# $Id: CHANGES,v 1.121 2004/05/04 15:14:06 martin Exp $
+# $Id: CHANGES,v 1.122 2004/05/19 10:02:31 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see 
 # the enclosed file COPYING for license information (GPL). If you 
@@ -11,6 +11,10 @@
 
 CVS head 
 
+ - (2004/05/18) added html application output filter option, e. g. to
+    filter java script of the application or to manipulate the html 
+    output of the application.
+    (see alos Kernel/Config/Defaults.pm -> Frontend::Output::PostFilter) 
  - (2004/05/04) added ticket history log on ticket link update and 
     notification info if link ticket number doesn't exists.
  - (2004/05/03) added PreApplicationModule examples to Kernel/Config.pm
